k8s/minio-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neptune-minio
spec:
  serviceName: neptune-minio
  replicas: 1
  selector:
    matchLabels:
      app: neptune-minio
  template:
    metadata:
      labels:
        app: neptune-minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-12-18T02-18-03Z
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi

---
apiVersion: v1
kind: Service
metadata:
  name: neptune-minio
spec:
  selector:
    app: neptune-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
